--- a/logrotate.conf
+++ b/logrotate.conf
@@ -25,7 +25,7 @@
   notifempty
   copytruncate
 }
-/rails/rxsupport/log/*.log {
+/rails/rxsupport/current/log/*.log {
   weekly
   missingok
   rotate 7
